static/public/stylesheets/main.css
h1 {
	color: #ffffff;
	font-family: 'Indie Flower';
	font-size: 70px;
}

h2 {
	color: #ffffff;
	font-size: 60px;
	text-align: center;
	font-weight: bold;
	padding-bottom: 5px;
	font-family: 'Indie Flower';
}

h3 {
	color: #ffffff;
	font-size: 40px;
	font-family:'Indie Flower', sans-serif; 
	text-align: center;
	padding-top: 20px;
}

.text-container {
	margin: 20px 70px 20px 70px;
	padding-left: 40px;
	padding-right: 40px;
}

#buttons {
	position: absolute;
	left: 0; right: 0; margin: 0 auto;
	bottom: 1em;
}

#yesButton, #noButton, #play-again-button, #start {
	width: 400px;
	height: 60px;
	font-size: 40px;
	line-height: 40px;
	font-family: 'Indie Flower';
}

#start {
	margin-top: 50px;
}

.image-size {
	width: 100%;
}

#left {
	position: absolute;
	left: 1;
	top: 7em;
}

#right {
	position: absolute;
	right: 0;
	top: 7em;
}

.background-tint {
	opacity: 0.3;
	background-color: #000000;
	width: 100%;
	height: 100%;
	position: fixed;
	z-index: -1;
}

.img-container {
	width: 420px;
	height: 420px;
	overflow: hidden;
	margin: 0 auto;
	box-shadow: 10px 10px 30px 10px gray;
}

.page-head {
	text-align: center;
	width: 100%;
	margin-bottom: 50px;
}

.btn-center {
	text-align: center;
	padding-bottom: 8px;
}

.emoji {
	position: absolute;
	width: 250px;
	margin-left: -125px;
	left: 50%;
	margin-top: -500px;
}

.left-background {
	background-image: url(../images/IU.jpg);
	width: 50%;
	height: 100%;
	position: fixed;
	left: 0;
	-webkit-filter: blur(15px);
	-moz-filter: blur(15px);
	-o-filter: blur(15px);
	-ms-filter: blur(15px);
	filter: blur(15px);
}

.right-background {
	background-image: url(../images/yoona.png);
	width: 50%;
	height: 100%;
	position: fixed;
	right: 0;
	-webkit-filter: blur(15px);
	-moz-filter: blur(15px);
	-o-filter: blur(15px);
	-ms-filter: blur(15px);
	filter: blur(15px);
}

#left-background-1 {
	opacity: 1;
	z-index: -1;
}

#right-background-1 {
	opacity: 1;
	z-index: -1;
}

#left-background-2 {
	opacity: 0;
	z-index: -2;
}

#right-background-2 {
	opacity: 0;
	z-index: -2;
}

#start-game {
	background-color: rgba(0, 0, 0, 0.85);
	position: fixed;
	width: 100%;
	height: 100%;
	z-index: 1;
}

#losing-screen{
	position: absolute;
	background-color: rgba(0,0,0,0.9);
	top: -150%;
	left: 0;
	height: 100%;
	width: 100%;
	text-align: center;
	opacity: 1;
}

.highscore {
	display: block;
}

#highscore {
	font-size: 200px;
}

#message {
	margin-bottom: 30px;
	margin-right: 60px;
	margin-left: 60px;
}
.btn-bottom {
	position: absolute;
	width: 100%;
	height: 60px;
}

